force-app/main/default/objects/Account/fields/CSAT__c.field-meta.xml
<CustomField>
    <fullName>CSAT__c</fullName>
    <description>Média das Notas de Atendimento</description>
    <formula>SomaNotasSatisfacao__c /  QuantidadedePesquisas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>