force-app/main/default/objects/Account/fields/documentType__c.field-meta.xml
<CustomField>
    <fullName>documentType__c</fullName>
    <label>Tipo de Documento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>