force-app/main/default/objects/Account/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email da conta PF ou PJ.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>