force-app/main/default/objects/Account/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>Primeiro Nome</description>
    <label>Primeiro Nome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>