force-app/main/default/objects/Account/fields/IntegrationAccount__c.field-meta.xml
<CustomField>
    <fullName>IntegrationAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifica se a conta foi criada pela integração ou pelo SF.</description>
    <inlineHelpText>Identifica se a conta foi criada pela integração (Marcado) ou pelo SF (Desmarcado).</inlineHelpText>
    <label>Conta integração?</label>
    <type>Checkbox</type>
</CustomField>