force-app/main/default/objects/Account/fields/IsCorporate__c.field-meta.xml
<CustomField>
    <fullName>IsCorporate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valida se a conta é pessoa jurídica ou pessoa física.</description>
    <inlineHelpText>Informa se a conta é Pessoa Jurídica ou Pessoa física.</inlineHelpText>
    <label>Pessoa Jurídica?</label>
    <type>Checkbox</type>
</CustomField>