force-app/main/default/objects/Account/fields/phoneType__c.field-meta.xml
<CustomField>
    <fullName>phoneType__c</fullName>
    <label>Tipo de Telefone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>residential</fullName>
                <default>true</default>
                <label>Residencial</label>
            </value>
            <value>
                <fullName>commercial</fullName>
                <label>Comercial</label>
            </value>
            <value>
                <fullName>mobile</fullName>
                <label>Celular</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>