force-app/main/default/objects/Account/fields/QuantidadedePesquisas__c.field-meta.xml
<CustomField>
    <fullName>QuantidadedePesquisas__c</fullName>
    <description>Quantidade de pesquisas de satisfação usada no cálculo de média de nota de atendimento.</description>
    <label>Quantidade de Pesquisas</label>
    <summaryFilterItems>
        <field>Pesquisa_de_Satisfacao__c.Qual_a_nota_para_este_atendimento__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Pesquisa_de_Satisfacao__c.Qual_a_nota_para_este_atendimento__c</field>
        <operation>lessThan</operation>
        <value>6</value>
    </summaryFilterItems>
    <summaryForeignKey>Pesquisa_de_Satisfacao__c.Conta__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>