force-app/main/default/objects/Account/fields/SomaNotasSatisfacao__c.field-meta.xml
<CustomField>
    <fullName>SomaNotasSatisfacao__c</fullName>
    <description>A soma das notas de pesquisa de satisfação usada no cálculo da média.</description>
    <label>Soma Notas de Satisfação</label>
    <summarizedField>Pesquisa_de_Satisfacao__c.Qual_a_nota_para_este_atendimento__c</summarizedField>
    <summaryFilterItems>
        <field>Pesquisa_de_Satisfacao__c.Qual_a_nota_para_este_atendimento__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Pesquisa_de_Satisfacao__c.Qual_a_nota_para_este_atendimento__c</field>
        <operation>lessThan</operation>
        <value>6</value>
    </summaryFilterItems>
    <summaryForeignKey>Pesquisa_de_Satisfacao__c.Conta__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>