force-app/main/default/objects/Account/recordTypes/Distribuidor.recordType-meta.xml
<RecordType>
    <fullName>Distribuidor</fullName>
    <active>true</active>
    <label>Distribuidor</label>
</RecordType>