force-app/main/default/objects/Account/recordTypes/PessoaJuridica.recordType-meta.xml
<RecordType>
    <fullName>PessoaJuridica</fullName>
    <active>true</active>
    <description>Criação de conta, utilizada para empresas com preenchimento do CNPJ.</description>
    <label>Pessoa Jurídica</label>
</RecordType>